--- a/ruff.html
+++ b/ruff.html
@@ -1,7 +1,9 @@
+<!-- Password display section with input field and copy button -->
 <div class="password-display">
             <input type="text" id="password" readonly>
             <button id="copy-btn">Copy</button>
         </div>
+        <!-- Options section for password generation settings -->
         <div class="options">
             <label>
                 Length:
@@ -24,5 +26,6 @@
                 Include Symbols
             </label>
         </div>
+        <!-- Button to trigger password generation based on options -->
         <button id="generate-btn">Generate Password</button>
     </div>
